@@ -61,7 +61,7 @@ public class AlignedPairExclusion extends AlignedExclusion {
          * cells
          */
         // First iterate on the first two cells
-        Permutations cellSetPerm2 = new Permutations(2, cellExcluders.size());
+        Twomutations cellSetPerm2 = new Twomutations(2, cellExcluders.size());
         while (cellSetPerm2.hasNext()) {
             int[] indexes = cellSetPerm2.nextBitNums();
             // Setup the first two cells
